--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">MovieApp</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_detail_movie">DetailMovieActivity</string>
+
+    <string name="overview">OVERVIEW: </string>
+    <string name="release_date">RELEASE DATE: </string>
+    <string name="popularity">POPULARITY: </string>
+
 </resources>
