--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,11 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_detail_movie">DetailMovieActivity</string>
 
-    <string name="overview">OVERVIEW: </string>
-    <string name="release_date">RELEASE DATE: </string>
-    <string name="popularity">POPULARITY: </string>
+    <string name="overview">Overview:\n</string>
+    <string name="release_date">Release date:\n</string>
+    <string name="popularity">Popularity:\n </string>
     <string name="transition_card">card</string>
     <string name="movie_item_description">Movie Poster Image</string>
+    <string name="vote_average">Vote average:\n</string>
 
 </resources>
